manifests/media-api/02-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-api
  namespace: media
spec:
  replicas: 2
  selector:
    matchLabels:
      app: media-api
  template:
    metadata:
      labels:
        app: media-api
    spec:
      serviceAccountName: media-api-sa
      containers:
        - name: media-api
          image: 635014547592.dkr.ecr.us-east-1.amazonaws.com/jellyfin-media-api:a8bd56a5b5bc8ca312d6c5be5449715e9a7daa9b
        imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: media-api-svc
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: media-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
